# aws-sam-sandbox

./: .gitignore  constraints.txt  pyproject.toml  samconfig.toml  template_dev.yaml
.github/workflows/: dev.yml
aws_sam_sandbox/: initilizer.py  routers.py  wsgi.py
src/: main.py  wsgi.py
src/aws_sam_sandbox/: wsgi.py
